[package]
name = "lsmdb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
bloomfilter = { version = "1.0.9", features = ["serde"] }
memmap2 = { version = "0.9.4" }
byteorder = "1.4.3"
crc32fast = "1.3.2"
bincode = "2.0.0-rc.1"
crc = "3.0.0"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
ouroboros = "0.18"
crossbeam = "0.8"
parking_lot = "0.12.1"
fs2 = "0.4.3"

# brotli = { version = "3.3.4", optional = true }
# zstd = { version = "0.11", optional = true }
# snap = { version = "1.0.5", optional = true }

[dev-dependencies]
rand = "0.8"
tempfile = "3"
criterion = "0.5.1"

[[bench]]
name = "bogo_benchmark"
harness = false
